[gd_scene load_steps=17 format=2]

[ext_resource path="res://Dodo/Dodo.tscn" type="PackedScene" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Environment/Terrain.tscn" type="PackedScene" id=3]
[ext_resource path="res://Mechs/BossHp.tscn" type="PackedScene" id=4]
[ext_resource path="res://BGM/GDQ - 2021 - BGM Phase 1 - Intro.mp3" type="AudioStream" id=5]
[ext_resource path="res://MainLevel.gd" type="Script" id=6]
[ext_resource path="res://Projectiles/Missile.tscn" type="PackedScene" id=7]
[ext_resource path="res://WorkingPauseMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://Mechs/KillerDutchMech.tscn" type="PackedScene" id=9]
[ext_resource path="res://Font/PixelFJVerdana12pt.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://UI/GameOver.tscn" type="PackedScene" id=11]
[ext_resource path="res://art/spr_sky.png" type="Texture" id=12]
[ext_resource path="res://art/spr_mountains.png" type="Texture" id=13]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 2
emission_box_extents = Vector3( 600, 1, 1 )
flag_disable_z = true
direction = Vector3( 0.1, 1, 0 )
spread = 15.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 300.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_random = 1.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 300.921, 71.2753 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 10 )

[node name="MainLevel2" type="Node2D"]
script = ExtResource( 6 )

[node name="Terrain" parent="." instance=ExtResource( 3 )]

[node name="Dodo" parent="." instance=ExtResource( 1 )]
scale = Vector2( 2, 2 )

[node name="Camera2D" type="Camera2D" parent="Dodo"]
current = true
zoom = Vector2( 1.5, 1.5 )
smoothing_enabled = true

[node name="Particles2D" type="Particles2D" parent="Dodo/Camera2D"]
position = Vector2( -33.6646, -477.111 )
z_index = 1
amount = 20
lifetime = 3.0
preprocess = 2.0
visibility_rect = Rect2( -2000, -2000, 4000, 4000 )
local_coords = false
process_material = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 81.567, 183.315 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
position = Vector2( 1.17982, 0.943907 )
scale = Vector2( 9.41375, 2.29783 )
texture = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -250.0
margin_top = 100.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "Timer: "
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossHp" parent="CanvasLayer" instance=ExtResource( 4 )]
margin_top = 556.163
margin_bottom = 596.163

[node name="Pause" parent="CanvasLayer" instance=ExtResource( 8 )]

[node name="GameOver" parent="CanvasLayer" instance=ExtResource( 11 )]
margin_right = 1024.0
margin_bottom = 600.0

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]

[node name="Sky" type="TextureRect" parent="CanvasLayer/ParallaxBackground"]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mountains" type="TextureRect" parent="CanvasLayer/ParallaxBackground"]
margin_left = 2.88342
margin_top = 439.709
margin_right = 1919.88
margin_bottom = 639.709
texture = ExtResource( 13 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxLayer" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="Missile" parent="." instance=ExtResource( 7 )]
position = Vector2( 846.164, 71.1846 )

[node name="KillerDutchMech" parent="." instance=ExtResource( 9 )]
position = Vector2( 1132.71, -366.651 )
z_index = -1
bossHPRef = NodePath("../CanvasLayer/BossHp")

[connection signal="died" from="Dodo" to="." method="_on_Dodo_died"]
[connection signal="finished" from="BGM" to="." method="_on_BGM_finished"]
